--- a/SFML_RPG/SFML_RPG.vcxproj
+++ b/SFML_RPG/SFML_RPG.vcxproj
@@ -138,10 +138,15 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Game.cpp" />
+    <ClCompile Include="ImageManager.cpp" />
     <ClCompile Include="Main.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Game.h" />
+    <ClInclude Include="ImageManager.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <Image Include="Resources\Textures\Mushroom.png" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
