Added: Player Animation Working!!

--- a/SFML_RPG/SFML_RPG.vcxproj
+++ b/SFML_RPG/SFML_RPG.vcxproj
@@ -164,6 +164,7 @@
     <Text Include="Maps\Map_001.txt" />
   </ItemGroup>
   <ItemGroup>
+    <Image Include="Resources\Textures\Entities\Enemy\goblin.png" />
     <Image Include="Resources\Textures\Entities\Misc\Mushroom.png" />
     <Image Include="Resources\Textures\Entities\Player\buckler.png" />
     <Image Include="Resources\Textures\Entities\Player\clothes.png" />
