--- a/SFML_RPG/SFML_RPG.vcxproj.filters
+++ b/SFML_RPG/SFML_RPG.vcxproj.filters
@@ -218,4 +218,7 @@
       <Filter>Resource Files</Filter>
     </Image>
   </ItemGroup>
+  <ItemGroup>
+    <Font Include="Resources\Fonts\Atarian\SF Atarian System.ttf" />
+  </ItemGroup>
 </Project>
