Update Animation, Combat

--- a/SFML_RPG/SFML_RPG.vcxproj
+++ b/SFML_RPG/SFML_RPG.vcxproj
@@ -170,6 +170,7 @@
   </ItemGroup>
   <ItemGroup>
     <Image Include="Resources\Textures\Entities\Enemy\goblin.png" />
+    <Image Include="Resources\Textures\Entities\Enemy\skeleton_0.png" />
     <Image Include="Resources\Textures\Entities\Misc\Mushroom.png" />
     <Image Include="Resources\Textures\Entities\Player\buckler.png" />
     <Image Include="Resources\Textures\Entities\Player\clothes.png" />
