--- a/SFML_RPG/SFML_RPG.vcxproj
+++ b/SFML_RPG/SFML_RPG.vcxproj
@@ -144,10 +144,12 @@
     <ClCompile Include="Enemy.cpp" />
     <ClCompile Include="Entity.cpp" />
     <ClCompile Include="Game.cpp" />
+    <ClCompile Include="GameState.cpp" />
     <ClCompile Include="Goblin.cpp" />
     <ClCompile Include="HealthBar.cpp" />
     <ClCompile Include="LevelManager.cpp" />
     <ClCompile Include="Main.cpp" />
+    <ClCompile Include="MenuState.cpp" />
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="TextureManager.cpp" />
   </ItemGroup>
@@ -158,10 +160,12 @@
     <ClInclude Include="Enemy.h" />
     <ClInclude Include="Entity.h" />
     <ClInclude Include="Game.h" />
+    <ClInclude Include="GameState.h" />
     <ClInclude Include="GlobalRPG.hpp" />
     <ClInclude Include="Goblin.h" />
     <ClInclude Include="HealthBar.h" />
     <ClInclude Include="LevelManager.h" />
+    <ClInclude Include="MenuState.h" />
     <ClInclude Include="Player.h" />
     <ClInclude Include="TextureManager.h" />
   </ItemGroup>
@@ -195,6 +199,7 @@
     <Image Include="Resources\Textures\Map\Grass\grassland_tiles.png" />
     <Image Include="Resources\Textures\Map\tiles_0.png" />
     <Image Include="Resources\Textures\Map\tiles_1.png" />
+    <Image Include="Resources\Textures\Menu\menu_background.png" />
   </ItemGroup>
   <ItemGroup>
     <Font Include="Resources\Fonts\Atarian\SF Atarian System.ttf" />
